fix indicators alignment

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -364,9 +364,9 @@ body {
   margin-bottom: 12px;
 }
 
-/* .cia-indicator {
+.cia-indicator {
   position: relative;
-} */
+}
 
 .cia-number, .cia-est {
   display: inline-block;
@@ -381,8 +381,9 @@ body {
 
 .cia-est {
   font-size: 12px;
+  line-height: 32px;
   margin-left: 8px;
-  right: 0;
+  position: absolute;
   bottom: 0;
 }
 
